syntax = "proto3";

option csharp_namespace = "SimpleGrpcServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc CalculateSum (CalculateSumRequest) returns (CalculateSumResponse);
  rpc FindFibonacciNumber (FindFibonacciNumberRequest) returns (FindFibonacciNumberResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloResponse {
  string message = 1;
}

message CalculateSumRequest {
  repeated int32 numbers = 1;
}

message CalculateSumResponse {
  int32 sum = 1;
}

message FindFibonacciNumberRequest {
  int32 fibonacci_number = 1;
}

message FindFibonacciNumberResponse {
  int32 number = 1;
}
